--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -9,3 +9,14 @@
 .register-area {
   margin-bottom: 8px;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  height: 50vh;
+  align-items: center;
+}
+
+nz-form-label{
+  padding-right: 10px;
+}
