--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,1 +1,7 @@
-<p>welcome works!</p>
+<div class="background">
+  <div class="content">
+    <h1>歡迎使用訂房系統，請先登入！</h1>
+
+    <button (click)="toLogin()" nz-button [nzType]="'primary'">登入</button>
+  </div>
+</div>
