add post room page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,9 +26,10 @@
           }
 
           @if (isAdmin) {
+
           <li nz-menu-item nzMatchRouter>
             <nz-icon nzType="apartment" nzTheme="outline" />
-            <a routerLink="/admin/rooms">房間</a>
+            <a routerLink="/admin/post-rooms">創立空房</a>
           </li>
           <li nz-menu-item nzMatchRouter>
             <nz-icon nzType="pull-request" nzTheme="outline" />
