--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -17,3 +17,9 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.btn{
+  display: flex;
+  margin-top: 30%;
+  justify-content: space-evenly;
+}
