--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,7 +1,9 @@
 <div class="background">
   <div class="content">
-    <h1>歡迎使用訂房系統，請先登入！</h1>
-
-    <button (click)="toLogin()" nz-button [nzType]="'primary'">登入</button>
+    <h1>歡迎使用訂房系統</h1>
+    <div class="btn">
+      <button (click)="toLogin()" nz-button [nzType]="'primary'">登入</button>
+      <button (click)="toRegister()" nz-button [nzType]="'primary'">註冊</button>
+    </div>
   </div>
 </div>
