--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,9 +1,27 @@
+.content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 75vh;
+  background-color: #f4f6f9;
+}
+
 .login-form {
-  max-width: 300px;
+  max-width: 450px;
+  width: 100%;
+  background: #ffffff;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .login-form-margin {
   margin-bottom: 16px;
+  width: 100%;
+
 }
 
 .login-form-forgot {
@@ -11,5 +29,23 @@
 }
 
 .login-form-button {
-  width: 100%;
+  width: 40%;
+  height: 10%;
+  padding: 10px 0;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 6px;
+  transition: all 0.3s ease;
+}
+
+.login-form-button:hover {
+  transform: scale(1.05);
+}
+
+a {
+  display: block;
+  text-align: center;
+  color: #1890ff;
+  text-decoration: none;
+  margin-top: 10px;
 }
