--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
     <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="name">Name</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="請輸入名字！">
+      <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="name">名稱</nz-form-label>
+      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="請輸入名稱！">
         <input nz-input formControlName="name" id="name" />
       </nz-form-control>
     </nz-form-item>
@@ -13,7 +13,7 @@
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="password" nzRequired>Password</nz-form-label>
+      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="password" nzRequired>密碼</nz-form-label>
       <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="請輸入密碼！">
         <input nz-input type="password" id="password" formControlName="password" />
       </nz-form-control>
@@ -21,7 +21,7 @@
 
     <nz-form-item>
       <nz-form-control [nzSpan]="14" [nzOffset]="6">
-        <button nz-button nzType="primary">Register</button>
+        <button nz-button nzType="primary">註冊</button>
       </nz-form-control>
     </nz-form-item>
   </form>
