--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,9 +1,9 @@
-<div class="background">
+<!-- <div class="background"> -->
   <div class="content">
-    <h1>歡迎使用訂房系統</h1>
+    <!-- <h1>歡迎使用訂房系統</h1> -->
     <div class="btn">
       <button (click)="toLogin()" nz-button [nzType]="'primary'">登入</button>
       <button (click)="toRegister()" nz-button [nzType]="'primary'">註冊</button>
     </div>
   </div>
-</div>
+<!-- </div> -->
