--- a/src/app/pages/admin/pages/rooms/rooms.component.html
+++ b/src/app/pages/admin/pages/rooms/rooms.component.html
@@ -9,15 +9,15 @@
     </nz-form-item>
     <nz-form-item>
       <nz-form-control nzErrorTip="請輸入房間類型！">
-        <nz-input-group>
-          <input formControlName="type" nz-input  placeholder="房間類型" />
+        <nz-input-group nzPrefixIcon="unordered-list">
+          <input formControlName="type" nz-input placeholder="房間類型" />
         </nz-input-group>
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
       <nz-form-control nzErrorTip="請輸入房間價格！">
-        <nz-input-group>
-          <input formControlName="price" nz-input  placeholder="房間價格" />
+        <nz-input-group nzPrefixIcon="money-collect">
+          <input formControlName="price" nz-input placeholder="房間價格" />
         </nz-input-group>
       </nz-form-control>
     </nz-form-item>
