--- a/src/app/pages/admin/pages/rooms/rooms.component.html
+++ b/src/app/pages/admin/pages/rooms/rooms.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form nz-form [nzLayout]="'inline'" [formGroup]="roomFrom" (ngSubmit)="submitForm()">
+  <form nz-form [nzLayout]="'inline'" [formGroup]="roomForm" (ngSubmit)="submitForm()">
     <nz-form-item>
       <nz-form-control nzErrorTip="請輸入房間名稱！">
         <nz-input-group nzPrefixIcon="home">
@@ -23,7 +23,7 @@
     </nz-form-item>
     <nz-form-item>
       <nz-form-control>
-        <button nz-button nzType="primary" [disabled]="!roomFrom.valid">確認</button>
+        <button nz-button nzType="primary" [disabled]="!roomForm.valid">確認</button>
       </nz-form-control>
     </nz-form-item>
   </form>
