add admin delete room function

--- a/src/app/pages/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/pages/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
     </ng-template>
 
     <ng-template #actionDelete>
-      <button nz-button nzType="link" nzDanger>刪除</button>
+      <button nz-button nzType="link" nzDanger (click)="showConfirmed(room.id)">刪除</button>
     </ng-template>
     }
   </div>
