--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,9 +1,10 @@
-<!-- <div class="background"> -->
+<div class="background">
   <div class="content">
-    <!-- <h1>歡迎使用訂房系統</h1> -->
+    <h1 class="title">歡迎使用旅宿管理系統</h1>
+    <p class="subtitle">輕鬆管理訂房流程，打造無憂體驗</p>
     <div class="btn">
       <button (click)="toLogin()" nz-button [nzType]="'primary'">登入</button>
       <button (click)="toRegister()" nz-button [nzType]="'primary'">註冊</button>
     </div>
   </div>
-<!-- </div> -->
+</div>
